--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
     "vue": "^3.3.4"
